--- a/index.html
+++ b/index.html
@@ -145,12 +145,11 @@
                 <div class="foraneo-li-container">
                     <div class="maps-container">
                         <iframe
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9394.748525858335!2d-104.6881623153905!3d19.209599944447525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8424b8f557d08435%3A0x466dced5494b4b26!2s48987%20Barra%20de%20Navidad%2C%20Jalisco!5e0!3m2!1sen!2smx!4v1702338746246!5m2!1sen!2smx"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59644.14199421628!2d-103.86654708041699!3d20.881767016907872!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842614da2b81b26f%3A0x38c2cd8e73684f12!2sTequila%2C%20Jalisco!5e0!3m2!1sen!2smx!4v1702342912383!5m2!1sen!2smx"
                             style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
                         <div class="legend">
-                            <span>Barra de navidad, Jalisco</span>
+                            <span>Tequila, Jalisco</span>
                             <img src="./imagenes/SVG/icon-location.svg" class="location-icon" alt="">
                         </div>
                     </div>
@@ -191,7 +190,7 @@
                 <i class="fa-solid fa-check"></i>
                 <ul id="tours-list">
                     <li>Tour acuático</li>
-                    <li>Tours en blazers</li>
+                    <li>Tours en Razers/ATV</li>
                     <li>Tour aéreo</li>
                     <li>Tour de montaña tirolesa</li>
                 </ul>
