--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
                 </strong>
                 <i class="fa-solid fa-check"></i>
                 <ul id="tours-list">
-                    <li>Tour acuático</li>
-                    <li>Tours en Razers/ATV</li>
-                    <li>Tour aéreo</li>
-                    <li>Tour de montaña tirolesa</li>
+                    <li>Tour <strong>acuático</strong></li>
+                    <li>Tours en <strong>Razers/ATV</strong> </li>
+                    <li>Tour <strong>aéreo</strong></li>
+                    <li>Tour de <strong>montaña tirolesa</strong></li>
                 </ul>
                 <span class="small-letter">Contacte para más información.</span>
             </div>
