--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Viajes y Turismo en Puerto Vallarta">
     <meta property="og:description" content="Servicio de Tours y transporte en puerto Vallarta Mexico">
-    <meta property="og:image" content="./imagenes/puerto vallarta.jpeg">
+    <meta property="og:image" content="https://unsplash.com/photos/aerial-view-of-city-near-body-of-water-during-daytime-S80jRUrTAqA">
     <meta property="og:image:alt" content="Ciudad de Puerto Vallarta Jalisco">
 </head>
 <body id="inicio">
