--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Viajes y Turismo en Puerto Vallarta">
     <meta property="og:description" content="Servicio de Tours y transporte en puerto Vallarta Mexico">
-    <meta property="og:image" content="https://unsplash.com/photos/aerial-view-of-city-near-body-of-water-during-daytime-S80jRUrTAqA">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1604814945660-441065ef811e?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <meta property="og:image:alt" content="Ciudad de Puerto Vallarta Jalisco">
 </head>
 <body id="inicio">
